--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,27 +1,36 @@
 {
-  "name": "web",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "^13.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "ui": "workspace:*"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "eslint-config-custom": "workspace:*",
-    "eslint": "7.32.0",
-    "tsconfig": "workspace:*",
-    "@types/node": "^17.0.12",
-    "@types/react": "^18.0.22",
-    "@types/react-dom": "^18.0.7",
-    "typescript": "^4.5.3"
-  }
+	"name": "web",
+	"version": "0.0.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"gen-gql": "graphql-codegen",
+		"codegen": "graphql-codegen --config codegen.ts"
+	},
+	"dependencies": {
+		"@apollo/client": "^3.7.9",
+		"@apollo/react-hooks": "^4.0.0",
+		"@chakra-ui/react": "^2.5.1",
+		"@emotion/react": "^11.10.6",
+		"@emotion/styled": "^11.10.6",
+		"framer-motion": "^10.0.1",
+		"graphql": "^16.6.0",
+		"next": "^13.1.1",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"ui": "workspace:*"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.0.0",
+		"@types/node": "^17.0.12",
+		"@types/react": "^18.0.22",
+		"@types/react-dom": "^18.0.7",
+		"eslint": "7.32.0",
+		"eslint-config-custom": "workspace:*",
+		"tsconfig": "workspace:*",
+		"typescript": "^4.5.3"
+	}
 }
