--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,11 +16,13 @@
 		"@chakra-ui/react": "^2.5.1",
 		"@emotion/react": "^11.10.6",
 		"@emotion/styled": "^11.10.6",
+		"daisyui": "^2.51.3",
 		"framer-motion": "^10.0.1",
 		"graphql": "^16.6.0",
 		"next": "^13.1.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-icons": "^4.7.1",
 		"ui": "workspace:*"
 	},
 	"devDependencies": {
@@ -28,8 +30,11 @@
 		"@types/node": "^17.0.12",
 		"@types/react": "^18.0.22",
 		"@types/react-dom": "^18.0.7",
+		"autoprefixer": "^10.4.13",
 		"eslint": "7.32.0",
 		"eslint-config-custom": "workspace:*",
+		"postcss": "^8.4.21",
+		"tailwindcss": "^3.2.7",
 		"tsconfig": "workspace:*",
 		"typescript": "^4.5.3"
 	}
