--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,9 +14,12 @@
 		"@apollo/client": "^3.7.9",
 		"@apollo/react-hooks": "^4.0.0",
 		"@chakra-ui/react": "^2.5.1",
+		"@chakra-ui/styled-system": "^2.6.1",
+		"@chakra-ui/theme-tools": "^2.0.16",
 		"@emotion/react": "^11.10.6",
 		"@emotion/styled": "^11.10.6",
 		"@fontsource/inter": "^4.5.15",
+		"@fontsource/montserrat": "^4.5.14",
 		"@fontsource/open-sans": "^4.5.14",
 		"daisyui": "^2.51.3",
 		"framer-motion": "^10.0.1",
