--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,5 +1,11 @@
 {
 	"extends": "tsconfig/nextjs.json",
+	"compilerOptions": {
+		"baseUrl": ".",
+		"paths": {
+			"@/*": ["src/*"]
+		}
+	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "codegen.yaml"],
 	"exclude": ["node_modules"]
 }
