--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -15,5 +15,8 @@
     "react": "^18.2.0",
     "tsconfig": "workspace:*",
     "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "@chakra-ui/react": "^2.5.1"
   }
 }
