--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,6 +17,7 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.5.1"
+    "@chakra-ui/react": "^2.5.1",
+    "framer-motion": "^10.0.1"
   }
 }
