--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,8 +27,7 @@
 		"next": "^13.1.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"react-icons": "^4.7.1",
-		"ui": "workspace:*"
+		"react-icons": "^4.7.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.0.0",
