--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,7 +8,8 @@
 		"start": "next start",
 		"lint": "next lint",
 		"gen-gql": "graphql-codegen",
-		"codegen": "graphql-codegen --config codegen.ts"
+		"codegen": "graphql-codegen --config codegen.ts",
+		"gen": "plop"
 	},
 	"dependencies": {
 		"@apollo/client": "^3.7.9",
@@ -36,6 +37,7 @@
 		"@types/react-dom": "^18.0.7",
 		"eslint": "7.32.0",
 		"eslint-config-custom": "workspace:*",
+		"plop": "^3.1.2",
 		"tsconfig": "workspace:*",
 		"typescript": "^4.5.3"
 	}
