--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "codegen": "graphql-codegen --config codegen.yaml"
+    "codegen": "graphql-codegen --config codegen.yaml",
+    "gen": "plop"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "3.2.1",
@@ -22,6 +23,7 @@
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@graphql-typed-document-node/core": "^3.1.2",
     "eslint-config-custom": "workspace:*",
+    "plop": "^3.1.2",
     "prettier": "latest",
     "turbo": "latest"
   },
