--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@apollo/client": "^3.7.9",
 		"@apollo/react-hooks": "^4.0.0",
+		"@botmate/theme": "workspace:0.0.1-prerelease.1",
 		"@chakra-ui/anatomy": "^2.1.1",
 		"@chakra-ui/react": "^2.5.1",
 		"@chakra-ui/styled-system": "^2.6.1",
