--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,11 +19,14 @@
     "@emotion/styled": "^11.10.6",
     "@fontsource/inter": "^4.5.15",
     "@fontsource/open-sans": "^4.5.14",
+    "@reduxjs/toolkit": "^1.9.3",
+    "common": "workspace:^1.0.0",
     "framer-motion": "^10.0.1",
     "next": "^13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
