--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "gen": "plop"
+    "gen": "plop",
+    "gen:api": "npx @rtk-query/codegen-openapi openapi-config.ts"
   },
   "dependencies": {
     "@botmate/theme": "workspace:0.0.1-prerelease.1",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@rtk-query/codegen-openapi": "^1.0.0",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
