--- a/package.json
+++ b/package.json
@@ -15,18 +15,13 @@
     "gen": "plop"
   },
   "devDependencies": {
-    "@xencodes/prisma-class-generator": "0.2.5",
     "eslint-config-custom": "workspace:*",
     "plop": "^3.1.2",
     "prettier": "latest",
-    "prisma": "^4.11.0",
     "turbo": "latest"
   },
   "engines": {
     "node": ">=14.0.0"
   },
-  "packageManager": "pnpm@7.17.1",
-  "dependencies": {
-    "@prisma/client": "^4.11.0"
-  }
+  "packageManager": "pnpm@7.17.1"
 }
