--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "codegen": "graphql-codegen --config codegen.yaml",
-    "gen": "plop"
+    "gen": "plop",
+    "release": "release-it"
   },
   "devDependencies": {
+    "@release-it/conventional-changelog": "^5.1.1",
     "eslint-config-custom": "workspace:*",
     "plop": "^3.1.2",
     "prettier": "latest",
+    "release-it": "^15.7.0",
     "turbo": "latest"
   },
   "engines": {
