--- a/.release-it.json
+++ b/.release-it.json
@@ -7,8 +7,21 @@
   },
   "plugins": {
     "@release-it/conventional-changelog": {
-      "preset": "angular",
-      "infile": "CHANGELOG.md"
+      "infile": "CHANGELOG.md",
+      "preset": {
+        "name": "conventionalcommits",
+        "types": [
+          {
+            "type": "feat",
+            "section": "🚀 Features"
+          },
+          {
+            "type": "fix",
+            "section": "🪲 Bug Fixes"
+          },
+          {}
+        ]
+      }
     }
   }
 }
