--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "botmate",
-  "version": "0.0.1-prerelease.0",
+  "version": "0.0.1-alpha.0",
   "private": true,
   "workspaces": [
     "apps/*",
