chore: include sqlite3 in pkg

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -18,7 +18,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "pkg": "pkg -t node18-macos-arm64 -o botmate ."
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -40,6 +41,7 @@
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "sqlite3": "^5.1.4",
     "typeorm": "^0.3.12"
   },
   "devDependencies": {
@@ -84,7 +86,8 @@
   },
   "pkg": {
     "assets": [
-      "dist/client/**/*"
+      "dist/client/**/*",
+      "node_modules/sqlite3/**/*"
     ]
   }
 }
