--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,12 +25,12 @@ jobs:
       - run: pnpm run build
 
       - name: Setup release
-        run: mkdir -p release/botmate
+        run: mkdir -p release
 
       - name: Move dists to release
         run: |
           cp apps/server/package.json release/
-          cp -r apps/server/dist release/botmate/
+          cp -r apps/server/dist release/botmate
           cp -r apps/web/out release/botmate/client
       - name: Upload artifant
         uses: actions/upload-artifact@v2
