--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,13 +25,13 @@ jobs:
       - run: pnpm run build
 
       - name: Setup release
-        run: mkdir -p release
+        run: mkdir -p final
 
       - name: Move dists to release
         run: |
           cp apps/server/package.json release/
-          cp -r apps/server/dist release/botmate
-          cp -r apps/web/out release/botmate/client
+          cp -r apps/server/dist release/
+          cp -r apps/web/out release/dist/client
       - name: Upload artifant
         uses: actions/upload-artifact@v2
         with:
