--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -5,7 +5,9 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
-  "bin": "dist/main.js",
+  "bin": {
+    "botmate": "dist/botmate.js"
+  },
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -34,14 +36,15 @@
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
     "class-validator": "^0.14.0",
+    "commander": "7.0.0",
     "grammy": "^1.14.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.9.0",
+    "prompts": "^2.4.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "sqlite3": "^5.1.4",
     "typeorm": "^0.3.12"
   },
   "devDependencies": {
@@ -51,6 +54,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
+    "@types/prompts": "^2.4.2",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
