--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,9 +20,12 @@
     "@emotion/styled": "^11.10.6",
     "@fontsource/inter": "^4.5.15",
     "@fontsource/open-sans": "^4.5.14",
+    "@fontsource/ubuntu": "^4.5.11",
     "@reduxjs/toolkit": "^1.9.3",
+    "@uiw/react-textarea-code-editor": "^2.1.1",
     "framer-motion": "^10.0.1",
     "next": "^13.1.1",
+    "next-remove-imports": "^1.0.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.4",
