feat: custom script support

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -45,7 +45,8 @@
     "prompts": "^2.4.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.12"
+    "typeorm": "^0.3.12",
+    "vm2": "^3.9.14"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
