--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,13 +16,15 @@
     "@chakra-ui/react": "^2.5.1",
     "@chakra-ui/styled-system": "^2.6.1",
     "@chakra-ui/theme-tools": "^2.0.16",
+    "@codemirror/lang-javascript": "^6.1.4",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fontsource/inter": "^4.5.15",
     "@fontsource/open-sans": "^4.5.14",
     "@fontsource/ubuntu": "^4.5.11",
     "@reduxjs/toolkit": "^1.9.3",
-    "@uiw/react-textarea-code-editor": "^2.1.1",
+    "@uiw/codemirror-theme-tokyo-night": "^4.19.9",
+    "@uiw/react-codemirror": "^4.19.9",
     "framer-motion": "^10.0.1",
     "next": "^13.1.1",
     "next-remove-imports": "^1.0.10",
