--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -35,6 +35,7 @@
     "@nestjs/typeorm": "^9.0.1",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
+    "axios": "^1.3.4",
     "class-validator": "^0.14.0",
     "commander": "7.0.0",
     "grammy": "^1.14.1",
@@ -49,6 +50,7 @@
     "vm2": "^3.9.14"
   },
   "devDependencies": {
+    "@grammyjs/types": "^3.0.1",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
