--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@uiw/codemirror-theme-tokyo-night": "^4.19.9",
     "@uiw/react-codemirror": "^4.19.9",
+    "chakra-react-select": "^4.6.0",
     "framer-motion": "^10.0.1",
     "next": "^13.1.1",
     "next-remove-imports": "^1.0.10",
