--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -33,7 +33,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.4",
     "react-icons": "^4.7.1",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
