--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,6 +23,8 @@
     "@fontsource/open-sans": "^4.5.14",
     "@fontsource/ubuntu": "^4.5.11",
     "@reduxjs/toolkit": "^1.9.3",
+    "@sentry/react": "^7.42.0",
+    "@sentry/tracing": "^7.42.0",
     "@uiw/codemirror-theme-tokyo-night": "^4.19.9",
     "@uiw/react-codemirror": "^4.19.9",
     "chakra-react-select": "^4.6.0",
