--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -38,6 +38,7 @@
     "axios": "^1.3.4",
     "class-validator": "^0.14.0",
     "commander": "7.0.0",
+    "find-up": "4.0.0",
     "grammy": "^1.14.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
