--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,10 @@ jobs:
         with:
           to: '-1001737476988'
           token: ${{ secrets.BOT_TOKEN }}
+          format: markdown
           message: |
             🚀 New version: ${{ github.ref_name }} published.
 
-            Run `npm i -g botmate` to update.
+            *Release notes:*
+
+            ${{ github.event.release.body }}
