--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -33,6 +33,8 @@
     "@nestjs/serve-static": "^3.0.1",
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/typeorm": "^9.0.1",
+    "@sentry/core": "^7.42.0",
+    "@sentry/node": "^7.42.0",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
     "axios": "^1.3.4",
