--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,6 +29,7 @@
     "@uiw/react-codemirror": "^4.19.9",
     "chakra-react-select": "^4.6.0",
     "framer-motion": "^10.0.1",
+    "moment": "^2.29.4",
     "next": "^13.1.1",
     "next-remove-imports": "^1.0.10",
     "react": "18.2.0",
