--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -32,9 +32,11 @@
     "@nestjs/jwt": "^10.0.2",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.3.9",
     "@nestjs/serve-static": "^3.0.1",
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/typeorm": "^9.0.1",
+    "@nestjs/websockets": "^9.3.9",
     "@sentry/core": "^7.42.0",
     "@sentry/node": "^7.42.0",
     "@types/passport-jwt": "^3.0.8",
@@ -51,6 +53,7 @@
     "prompts": "^2.4.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "socket.io": "^4.6.1",
     "typeorm": "^0.3.12",
     "vm2": "^3.9.14"
   },
