--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -36,12 +36,15 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.4",
     "react-icons": "^4.7.1",
+    "react-json-view": "^1.21.3",
     "react-redux": "^8.0.5",
-    "react-toastify": "^9.1.1"
+    "react-toastify": "^9.1.1",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@rtk-query/codegen-openapi": "^1.0.0",
+    "@types/mixpanel-browser": "^2.38.1",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
