--- a/packages/plugins/telegram/package.json
+++ b/packages/plugins/telegram/package.json
@@ -1,15 +1,24 @@
 {
-	"name": "@botmate/plugin.telegram",
-	"version": "1.0.0",
-	"main": "./index.js",
-	"botmate": {
-		"displayName": "Telegram",
-		"name": "telegram",
-		"description": "Telegram platform plugin for Botmate",
-		"required": true,
-		"kind": "plugin"
-	},
-	"dependencies": {
-		"grammy": "^1.15.3"
-	}
+  "name": "@botmate/plugin.telegram",
+  "version": "1.0.0",
+  "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
+  "scripts": {
+    "build": "tsc -p tsconfig.json"
+  },
+  "botmate": {
+    "displayName": "Telegram",
+    "name": "telegram",
+    "description": "Telegram platform plugin for Botmate",
+    "required": true,
+    "kind": "plugin"
+  },
+  "dependencies": {
+    "@botmate/typescript-utils": "workspace:^1.0.0",
+    "@types/react": "^18.0.28",
+    "grammy": "^1.15.3"
+  },
+  "devDependencies": {
+    "typescript": "^5.0.2"
+  }
 }
