--- a/packages/core/admin/package.json
+++ b/packages/core/admin/package.json
@@ -13,6 +13,7 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/runtime": "^7.20.13",
+    "@botmate/eslint-config": "workspace:^0.0.1",
     "@botmate/typescript-utils": "workspace:1.0.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@types/chokidar": "^2.1.3",
@@ -54,6 +55,5 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "webpack-bundle-analyzer": "^4.8.0"
-  },
-  "peerDependencies": {}
+  }
 }
