--- a/examples/get-started/package.json
+++ b/examples/get-started/package.json
@@ -1,16 +1,19 @@
 {
-	"name": "get-started",
-	"scripts": {
-		"dev": "botmate develop",
-		"watch": "botmate watch-admin"
-	},
-	"dependencies": {
-		"@botmate/core": "workspace:*",
-		"@botmate/plugin.discord": "workspace:^1.0.0",
-		"@botmate/plugin.telegram": "workspace:*",
-		"react": "^18.2.0"
-	},
-	"devDependencies": {
-		"@types/react": "^18.0.28"
-	}
+  "name": "get-started",
+  "scripts": {
+    "dev": "botmate develop",
+    "build": "botmate build",
+    "start": "botmate start"
+  },
+  "dependencies": {
+    "@botmate/core": "workspace:*",
+    "@botmate/plugin.discord": "workspace:^1.0.0",
+    "@botmate/plugin.telegram": "workspace:*",
+    "react": "^18.2.0"
+  },
+  "devDependencies": {
+    "@botmate/typescript-utils": "workspace:^1.0.0",
+    "@types/node": "^18.15.7",
+    "@types/react": "^18.0.28"
+  }
 }
