--- a/packages/platforms/telegram/package.json
+++ b/packages/platforms/telegram/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@botmate/plugin.telegram",
+  "name": "@botmate/platform.telegram",
   "version": "1.0.0",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
