--- a/packages/core/botmate/package.json
+++ b/packages/core/botmate/package.json
@@ -1,45 +1,44 @@
 {
-	"name": "@botmate/core",
-	"version": "1.0.0",
-	"bin": {
-		"botmate": "./lib/bin.js"
-	},
-	"main": "dist/index.js",
-	"types": "dist/index.d.ts",
-	"scripts": {
-		"dev": "tsc -w",
-		"build": "tsc -p ."
-	},
-	"dependencies": {
-		"@botmate/admin": "workspace:*",
-		"@botmate/plugin.discord": "workspace:^1.0.0",
-		"@botmate/plugin.telegram": "workspace:^1.0.0",
-		"@botmate/typescript-utils": "workspace:^1.0.0",
-		"@botmate/utils": "workspace:*",
-		"chalk": "4.1.2",
-		"chokidar": "^3.5.3",
-		"commander": "^10.0.0",
-		"cors": "^2.8.5",
-		"dotenv": "^16.0.3",
-		"execa": "^5.1.1",
-		"express": "^4.18.2",
-		"fs-extra": "^11.1.1",
-		"glob": "^9.3.1",
-		"inquirer": "8.2.5",
-		"lodash": "^4.17.21",
-		"morgan": "^1.10.0",
-		"resolve-cwd": "^3.0.0",
-		"yup": "0.32.9"
-	},
-	"devDependencies": {
-		"@types/dotenv": "^8.2.0",
-		"@types/express": "^4.17.17",
-		"@types/express-serve-static-core": "^4.17.33",
-		"@types/fs-extra": "^11.0.1",
-		"@types/glob": "^8.1.0",
-		"@types/lodash": "^4.14.191",
-		"@types/morgan": "^1.9.4",
-		"tiny-glob": "^0.2.9",
-		"typescript": "^5.0.2"
-	}
+  "name": "@botmate/core",
+  "version": "1.0.0",
+  "bin": {
+    "botmate": "./lib/bin.js"
+  },
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "dev": "tsc -w",
+    "build": "tsc -p ."
+  },
+  "dependencies": {
+    "@botmate/admin": "workspace:*",
+    "@botmate/platform.telegram": "workspace:^1.0.0",
+    "@botmate/typescript-utils": "workspace:^1.0.0",
+    "@botmate/utils": "workspace:*",
+    "chalk": "4.1.2",
+    "chokidar": "^3.5.3",
+    "commander": "^10.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "execa": "^5.1.1",
+    "express": "^4.18.2",
+    "fs-extra": "^11.1.1",
+    "glob": "^9.3.1",
+    "inquirer": "8.2.5",
+    "lodash": "^4.17.21",
+    "morgan": "^1.10.0",
+    "resolve-cwd": "^3.0.0",
+    "yup": "0.32.9"
+  },
+  "devDependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.17",
+    "@types/express-serve-static-core": "^4.17.33",
+    "@types/fs-extra": "^11.0.1",
+    "@types/glob": "^8.1.0",
+    "@types/lodash": "^4.14.191",
+    "@types/morgan": "^1.9.4",
+    "tiny-glob": "^0.2.9",
+    "typescript": "^5.0.2"
+  }
 }
