--- a/examples/get-started/package.json
+++ b/examples/get-started/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0"
   },
   "devDependencies": {
+    "@botmate/types": "workspace:*",
     "@botmate/typescript-utils": "workspace:^1.0.0",
     "@types/node": "^18.15.7",
     "@types/react": "^18.0.28"
