--- a/packages/core/admin/.gitignore
+++ b/packages/core/admin/.gitignore
@@ -9,7 +9,7 @@ yarn-error.log
 npm-debug.log
 .idea
 .env
-admin/src/plugins-dev.js
-admin/src/plugins.js
+admin/src/plugins-dev.ts
+admin/src/plugins.ts
 
 lib/
