--- a/packages/core/admin/package.json
+++ b/packages/core/admin/package.json
@@ -3,57 +3,65 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "develop": "yarn create:plugin-file && yarn develop:webpack",
+    "develop": "pnpm create:plugin-file && pnpm develop:webpack",
     "develop:webpack": "cross-env NODE_ENV=development webpack serve --config webpack.config.dev.js --progress profile",
+    "create:plugin-file": "node ./scripts/create-dev-plugins-file.js",
     "build": "tsc -p ."
   },
-  "devDependencies": {
+  "dependencies": {
     "@babel/core": "^7.20.12",
     "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/runtime": "^7.20.13",
     "@botmate/eslint-config": "workspace:^0.0.1",
-    "@botmate/typescript-utils": "workspace:1.0.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
-    "@types/chokidar": "^2.1.3",
-    "@types/react": "^18.0.28",
-    "babel-loader": "^9.1.2",
-    "browserslist-to-esbuild": "^1.2.0",
-    "chokidar": "^3.5.3",
-    "esbuild-loader": "^3.0.1",
-    "fork-ts-checker-webpack-plugin": "^8.0.0",
-    "html-loader": "^4.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.7.5",
-    "react-refresh": "^0.14.0",
-    "speed-measure-webpack-plugin": "^1.5.0",
-    "typescript": "^5.0.2",
-    "webpack": "^5.76.2",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.13.1",
-    "webpackbar": "^5.0.2"
-  },
-  "dependencies": {
     "@botmate/helper-plugin": "workspace:*",
     "@botmate/types": "workspace:*",
+    "@botmate/typescript-utils": "workspace:1.0.0",
     "@botmate/ui": "workspace:^1.0.0",
+    "@chakra-ui/react": "^2.5.3",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "@types/chokidar": "^2.1.3",
     "@types/fs-extra": "^11.0.1",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.15.7",
+    "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "babel-loader": "^9.1.2",
+    "browserslist-to-esbuild": "^1.2.0",
     "chalk": "4.1.2",
+    "chokidar": "^3.5.3",
     "cross-env": "^7.0.3",
+    "css-loader": "^6.7.3",
     "dotenv": "^16.0.3",
     "duplicate-dependencies-webpack-plugin": "^1.0.2",
+    "esbuild-loader": "^3.0.1",
+    "fast-glob": "^3.2.12",
     "find-root": "^1.1.0",
+    "fork-ts-checker-webpack-plugin": "^8.0.0",
+    "framer-motion": "^10.9.1",
     "fs-extra": "^11.1.1",
     "glob": "^9.3.1",
+    "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "invariant": "^2.2.4",
     "lodash": "^4.17.21",
+    "mini-css-extract-plugin": "^2.7.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-loader": "^4.13.1",
+    "react-icons": "^4.8.0",
+    "react-refresh": "^0.14.0",
     "react-router-dom": "^6.9.0",
-    "webpack-bundle-analyzer": "^4.8.0"
+    "speed-measure-webpack-plugin": "^1.5.0",
+    "style-loader": "^3.3.2",
+    "typescript": "^5.0.2",
+    "webpack": "^5.76.2",
+    "webpack-bundle-analyzer": "^4.8.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.13.1",
+    "webpackbar": "^5.0.2"
   }
 }
