--- a/packages/core/helper-plugin/package.json
+++ b/packages/core/helper-plugin/package.json
@@ -9,6 +9,7 @@
 		"react": "^18.2.0"
 	},
 	"devDependencies": {
+		"@botmate/types": "workspace:*",
 		"tsup": "^6.7.0",
 		"typescript": "^5.0.2"
 	}
