--- a/packages/shared/ui/package.json
+++ b/packages/shared/ui/package.json
@@ -1,42 +1,54 @@
 {
-	"name": "@botmate/ui",
-	"version": "1.0.0",
-	"type": "module",
-	"main": "dist/index.cjs",
-	"module": "dist/index.js",
-	"types": "dist/index.d.ts",
-	"scripts": {
-		"dev": "vite",
-		"build": "tsc && vite build",
-		"preview": "vite preview",
-		"storybook": "cross-env NODE_OPTIONS=--openssl-legacy-provider start-storybook -p 6006",
-		"build-storybook": "build-storybook"
-	},
-	"dependencies": {
-		"@rollup/plugin-typescript": "^11.0.0",
-		"@vitejs/plugin-react": "^3.1.0",
-		"@xstyled/prop-types": "^3.7.0",
-		"@xstyled/styled-components": "^3.7.3",
-		"cross-env": "^7.0.3",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"styled-components": "^5.3.9",
-		"tiny-glob": "^0.2.9"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.21.3",
-		"@storybook/addon-actions": "^6.5.16",
-		"@storybook/addon-essentials": "^6.5.16",
-		"@storybook/addon-interactions": "^6.5.16",
-		"@storybook/addon-links": "^6.5.16",
-		"@storybook/builder-vite": "^0.4.2",
-		"@storybook/react": "^6.5.16",
-		"@storybook/testing-library": "^0.0.13",
-		"@types/react": "^18.0.28",
-		"@types/react-dom": "^18.0.11",
-		"@vitejs/plugin-react-swc": "^3.0.0",
-		"babel-loader": "^8.3.0",
-		"typescript": "^4.9.3",
-		"vite": "^4.2.0"
-	}
+  "name": "@botmate/ui",
+  "version": "1.0.0",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "dev": "nodemon",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "storybook": "cross-env NODE_OPTIONS=--openssl-legacy-provider start-storybook -p 6006",
+    "build-storybook": "build-storybook"
+  },
+  "dependencies": {
+    "@botmate/helper-plugin": "workspace:*",
+    "@chakra-ui/react": "^2.5.3",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@fontsource/roboto": "^4.5.8",
+    "@fontsource/ubuntu": "^4.5.11",
+    "framer-motion": "^10.9.1",
+    "react": "^18.2.0",
+    "react-icons": "^4.8.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.21.3",
+    "@chakra-ui/storybook-addon": "^4.0.16",
+    "@rollup/plugin-typescript": "^11.0.0",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/addon-interactions": "^6.5.16",
+    "@storybook/addon-links": "^6.5.16",
+    "@storybook/builder-vite": "^0.4.2",
+    "@storybook/react": "^6.5.16",
+    "@storybook/testing-library": "^0.0.13",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react-swc": "^3.0.0",
+    "babel-loader": "^8.3.0",
+    "cross-env": "^7.0.3",
+    "nodemon": "^2.0.22",
+    "react-router-dom": "^6.9.0",
+    "storybook-addon-react-router-v6": "^0.3.5",
+    "tiny-glob": "^0.2.9",
+    "typescript": "^4.9.3",
+    "vite": "^4.2.0"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0"
+  }
 }
