--- a/examples/get-started/package.json
+++ b/examples/get-started/package.json
@@ -14,6 +14,8 @@
     "@botmate/types": "workspace:*",
     "@botmate/typescript-utils": "workspace:^1.0.0",
     "@types/node": "^18.15.7",
-    "@types/react": "^18.0.28"
+    "@types/react": "^18.0.28",
+    "css-loader": "^6.7.3",
+    "style-loader": "^3.3.2"
   }
 }
