--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@botmate/eslint-config": "workspace:^0.0.1",
     "@nrwl/nx-cloud": "latest",
     "nx": "15.8.9",
-    "prettier": "2.8.4"
+    "prettier": "2.8.4",
+    "typescript": "^5.0.2"
   }
 }
