--- a/examples/get-started/src/plugins/telegram-hello-world/package.json
+++ b/examples/get-started/src/plugins/telegram-hello-world/package.json
@@ -14,6 +14,6 @@
   "devDependencies": {
     "@types/node": "^18.15.7",
     "@types/react": "^18.0.28",
-    "typescript": "^5.0.2"
+    "typescript": "4.9.5"
   }
 }
