--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "nx": "15.8.9",
     "plop": "^3.1.2",
     "prettier": "2.8.4",
-    "typescript": "^5.0.2"
+    "typescript": "4.9.5"
   }
 }
