--- a/packages/core/admin/package.json
+++ b/packages/core/admin/package.json
@@ -3,8 +3,8 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "develop": "pnpm create:plugin-file && pnpm develop:webpack",
-    "develop:webpack": "cross-env NODE_ENV=development webpack serve --config webpack.config.dev.js --progress profile",
+    "dev": "pnpm create:plugin-file && pnpm dev:webpack",
+    "dev:webpack": "cross-env NODE_ENV=development webpack serve --config webpack.config.dev.js --progress profile",
     "create:plugin-file": "node ./scripts/create-dev-plugins-file.js",
     "build": "tsc -p ."
   },
@@ -22,7 +22,9 @@
     "@chakra-ui/react": "^2.5.3",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@loadable/component": "^5.15.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "@swc/core": "^1.3.42",
     "@types/chokidar": "^2.1.3",
     "@types/fs-extra": "^11.0.1",
     "@types/lodash": "^4.14.191",
@@ -57,7 +59,8 @@
     "react-router-dom": "^6.9.0",
     "speed-measure-webpack-plugin": "^1.5.0",
     "style-loader": "^3.3.2",
-    "typescript": "^5.0.2",
+    "swc-loader": "^0.2.3",
+    "typescript": "4.9.5",
     "webpack": "^5.76.2",
     "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.0.1",
