--- a/packages/core/botmate/package.json
+++ b/packages/core/botmate/package.json
@@ -41,6 +41,6 @@
     "@types/lodash": "^4.14.191",
     "@types/morgan": "^1.9.4",
     "tiny-glob": "^0.2.9",
-    "typescript": "^5.0.2"
+    "typescript": "4.9.5"
   }
 }
