--- a/packages/core/helper-plugin/package.json
+++ b/packages/core/helper-plugin/package.json
@@ -1,16 +1,16 @@
 {
-	"name": "@botmate/helper-plugin",
-	"main": "dist/index.js",
-	"scripts": {
-		"build": "tsup"
-	},
-	"dependencies": {
-		"@types/react": "^18.0.28",
-		"react": "^18.2.0"
-	},
-	"devDependencies": {
-		"@botmate/types": "workspace:*",
-		"tsup": "^6.7.0",
-		"typescript": "^5.0.2"
-	}
+  "name": "@botmate/helper-plugin",
+  "main": "dist/index.js",
+  "scripts": {
+    "build": "tsup"
+  },
+  "dependencies": {
+    "@types/react": "^18.0.28",
+    "react": "^18.2.0"
+  },
+  "devDependencies": {
+    "@botmate/types": "workspace:*",
+    "tsup": "^6.7.0",
+    "typescript": "4.9.5"
+  }
 }
