--- a/packages/shared/ui/package.json
+++ b/packages/shared/ui/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.21.3",
+    "@botmate/types": "workspace:*",
     "@chakra-ui/storybook-addon": "^4.0.16",
     "@rollup/plugin-typescript": "^11.0.0",
     "@storybook/addon-actions": "^6.5.16",
@@ -43,7 +44,6 @@
     "react-router-dom": "^6.9.0",
     "storybook-addon-react-router-v6": "^0.3.5",
     "tiny-glob": "^0.2.9",
-    "typescript": "^4.9.3",
     "vite": "^4.2.0"
   },
   "peerDependencies": {
