--- a/packages/core/admin/package.json
+++ b/packages/core/admin/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^18.15.7",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "apexcharts": "^3.37.2",
     "babel-loader": "^9.1.2",
     "browserslist-to-esbuild": "^1.2.0",
     "chalk": "4.1.2",
@@ -52,6 +53,7 @@
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.7.5",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-hot-loader": "^4.13.1",
     "react-icons": "^4.8.0",
@@ -64,7 +66,7 @@
     "webpack": "^5.76.2",
     "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.13.1",
+    "webpack-dev-server": "4.0.0",
     "webpackbar": "^5.0.2"
   }
 }
