--- a/packages/plugins/discord/package.json
+++ b/packages/plugins/discord/package.json
@@ -21,6 +21,10 @@
     "@botmate/typescript-utils": "workspace:^1.0.0",
     "@types/node": "^18.15.7",
     "@types/react": "^18.0.28",
+    "react-icons": "^4.8.0",
     "typescript": "4.9.5"
+  },
+  "peerDependencies": {
+    "react-icons": "^4.8.0"
   }
 }
