--- a/packages/core/botmate/package.json
+++ b/packages/core/botmate/package.json
@@ -40,6 +40,7 @@
     "@types/glob": "^8.1.0",
     "@types/lodash": "^4.14.191",
     "@types/morgan": "^1.9.4",
+    "mongoose": "^7.0.3",
     "tiny-glob": "^0.2.9",
     "typescript": "4.9.5"
   }
