feat: use vite as bundler [will remove webpack]

--- a/packages/core/admin/admin/src/tsconfig.json
+++ b/packages/core/admin/admin/src/tsconfig.json
@@ -1,6 +1,4 @@
 {
-	"extends": "@botmate/typescript-utils/tsconfigs/admin",
-
-	"include": ["./", "../../../**/admin/src/**/*"],
-	"exclude": ["node_modules", "**/*.test.js", "*.js"]
+  "extends": "@botmate/typescript-utils/tsconfigs/admin.json",
+  "include": ["."]
 }
