--- a/packages/shared/types/package.json
+++ b/packages/shared/types/package.json
@@ -4,6 +4,7 @@
 		"@types/react": "^18.0.28"
 	},
 	"devDependencies": {
-		"@botmate/schemas": "workspace:^1.0.0"
+		"@botmate/schemas": "workspace:^1.0.0",
+		"@types/loadable__component": "^5.13.4"
 	}
 }
