--- a/packages/core/helper-plugin/package.json
+++ b/packages/core/helper-plugin/package.json
@@ -1,6 +1,8 @@
 {
   "name": "@botmate/helper-plugin",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "module": "dist/index.mjs",
   "scripts": {
     "build": "tsup"
   },
