--- a/packages/shared/ui/tsconfig.json
+++ b/packages/shared/ui/tsconfig.json
@@ -20,6 +20,6 @@
     "outDir": "dist",
     "jsx": "react-jsx"
   },
-  "include": ["src"],
+  "include": ["src", "stories"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
