--- a/packages/shared/ui/package.json
+++ b/packages/shared/ui/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.8",
     "@fontsource/ubuntu": "^4.5.11",
+    "@monaco-editor/react": "^4.4.6",
     "framer-motion": "^10.9.1",
     "react": "^18.2.0",
     "react-icons": "^4.8.0"
