--- a/packages/core/botmate/package.json
+++ b/packages/core/botmate/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@botmate/admin": "workspace:*",
+    "@botmate/bots": "workspace:^0.0.1",
     "@botmate/database": "workspace:^0.0.1",
     "@botmate/plugin.telegram": "workspace:^1.0.0",
     "@botmate/schemas": "workspace:^1.0.0",
