--- a/packages/plugins/discord/package.json
+++ b/packages/plugins/discord/package.json
@@ -14,7 +14,8 @@
     "kind": "plugin"
   },
   "dependencies": {
-    "discord.js": "14.8.0"
+    "discord.js": "14.8.0",
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "@botmate/types": "workspace:*",
