--- a/packages/plugins/telegram/package.json
+++ b/packages/plugins/telegram/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "@botmate/ui": "workspace:^1.0.0",
     "grammy": "^1.15.3",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.0.3",
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "@botmate/types": "workspace:*",
