chore: script create, bot start working

--- a/packages/core/botmate/package.json
+++ b/packages/core/botmate/package.json
@@ -16,6 +16,7 @@
     "@botmate/database": "workspace:^0.0.1",
     "@botmate/plugin.telegram": "workspace:^1.0.0",
     "@botmate/schemas": "workspace:^1.0.0",
+    "@botmate/scripts": "workspace:*",
     "@botmate/typescript-utils": "workspace:^1.0.0",
     "@botmate/utils": "workspace:*",
     "chalk": "4.1.2",
