--- a/packages/shared/ui/package.json
+++ b/packages/shared/ui/package.json
@@ -16,11 +16,14 @@
     "@chakra-ui/anatomy": "^2.1.1",
     "@chakra-ui/react": "^2.5.3",
     "@chakra-ui/styled-system": "^2.7.0",
+    "@codemirror/lang-javascript": "^6.1.4",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.8",
     "@fontsource/ubuntu": "^4.5.11",
     "@monaco-editor/react": "^4.4.6",
+    "@uiw/codemirror-theme-aura": "^4.19.11",
+    "@uiw/react-codemirror": "^4.19.11",
     "framer-motion": "^10.9.1",
     "react": "^18.2.0",
     "react-icons": "^4.8.0"
