--- a/packages/core/admin/package.json
+++ b/packages/core/admin/package.json
@@ -54,6 +54,7 @@
     "invariant": "^2.2.4",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.7.5",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
