fix: add react-hook-form alias

--- a/examples/get-started/package.json
+++ b/examples/get-started/package.json
@@ -9,8 +9,7 @@
     "@botmate/core": "workspace:*",
     "@botmate/plugin.telegram": "workspace:*",
     "pg": "^8.10.0",
-    "react": "^18.2.0",
-    "react-hook-form": "^7.43.8"
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "@botmate/types": "workspace:*",
