--- a/packages/core/botmate/package.json
+++ b/packages/core/botmate/package.json
@@ -24,6 +24,7 @@
     "commander": "^10.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "eventemitter2": "^6.4.9",
     "execa": "^5.1.1",
     "express": "^4.18.2",
     "fs-extra": "^11.1.1",
