chore: fix version

--- a/packages/core/botmate/package.json
+++ b/packages/core/botmate/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@botmate/core",
-  "version": "1.0.0",
+  "version": "0.0.1-prerelease.24",
   "bin": {
     "botmate": "./lib/bin.js"
   },
