--- a/packages/shared/typescript/package.json
+++ b/packages/shared/typescript/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@botmate/typescript-utils",
-	"version": "1.0.0",
+	"version": "0.0.1-prerelease.24",
 	"description": "Typescript support for BotMate",
 	"keywords": [],
 	"author": "xencodes",
