--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "botmate",
-  "version": "1.0.0",
+  "version": "0.0.1-prerelease.24",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@botmate/core": "workspace:^1.0.0",
     "@botmate/eslint-config": "workspace:^0.0.1",
+    "@changesets/cli": "^2.26.1",
     "@nrwl/nx-cloud": "latest",
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.42",
