--- a/packages/plugins/telegram/package.json
+++ b/packages/plugins/telegram/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@botmate/plugin.telegram",
-  "version": "1.0.0",
+  "version": "0.0.1-prerelease.24",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "scripts": {
