--- a/examples/get-started/package.json
+++ b/examples/get-started/package.json
@@ -12,7 +12,7 @@
   },
   "devDependencies": {
     "@botmate/types": "workspace:*",
-    "@botmate/typescript-utils": "workspace:^1.0.0",
+    "@botmate/typescript-utils": "workspace:*",
     "@types/node": "^18.15.7",
     "@types/react": "^18.0.28"
   }
