--- a/packages/core/botmate/package.json
+++ b/packages/core/botmate/package.json
@@ -12,11 +12,11 @@
   },
   "dependencies": {
     "@botmate/admin": "workspace:*",
-    "@botmate/bots": "workspace:^0.0.1",
-    "@botmate/database": "workspace:^0.0.1",
-    "@botmate/plugin.telegram": "workspace:^1.0.0",
+    "@botmate/bots": "workspace:*",
+    "@botmate/database": "workspace:*",
+    "@botmate/plugin.telegram": "workspace:*",
     "@botmate/scripts": "workspace:*",
-    "@botmate/typescript-utils": "workspace:^1.0.0",
+    "@botmate/typescript-utils": "workspace:*",
     "@botmate/utils": "workspace:*",
     "bcrypt": "^5.1.0",
     "chalk": "4.1.2",
@@ -35,7 +35,7 @@
     "yup": "0.32.9"
   },
   "devDependencies": {
-    "@botmate/logger": "workspace:^4.8.2",
+    "@botmate/logger": "workspace:*",
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.42",
     "@types/cors": "^2.8.13",
