--- a/packages/core/database/package.json
+++ b/packages/core/database/package.json
@@ -18,6 +18,6 @@
     "npm": ">=6.0.0"
   },
   "devDependencies": {
-    "@botmate/typescript-utils": "workspace:^1.0.0"
+    "@botmate/typescript-utils": "workspace:*"
   }
 }
