--- a/packages/plugins/discord/package.json
+++ b/packages/plugins/discord/package.json
@@ -19,7 +19,7 @@
   },
   "devDependencies": {
     "@botmate/types": "workspace:*",
-    "@botmate/typescript-utils": "workspace:^1.0.0",
+    "@botmate/typescript-utils": "workspace:*",
     "@types/node": "^18.15.7",
     "@types/react": "^18.0.28",
     "react-icons": "^4.8.0",
