--- a/packages/core/bots/package.json
+++ b/packages/core/bots/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@botmate/bots",
-  "version": "0.0.1",
+  "version": "0.0.1-prerelease.24",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
