--- a/packages/core/admin/package.json
+++ b/packages/core/admin/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@botmate/admin",
+  "version": "0.0.1-prerelease.24",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
