--- a/packages/shared/eslint-config-custom/package.json
+++ b/packages/shared/eslint-config-custom/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@botmate/eslint-config",
+  "version": "0.0.1-prerelease.24",
   "main": "index.js",
-  "version": "0.0.1",
   "dependencies": {
     "@babel/eslint-parser": "^7.19.1",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
